--- a/index.html
+++ b/index.html
@@ -113,18 +113,36 @@
           class="w-1/2 h-auto mx-auto"
           src="Images/picture.webp"
         />
-        <div>
-          <h2 class="text-4xl font-bold mb-4">Qui est Jean Philippe VERT ?</h2>
-          <p class="text-lg">
-            Avec une riche expérience acquise au sein de la prestigieuse Cellule OpenSilex de l’unité MISTEA à l’INRAE de Montpellier, j’ai eu le privilège de participer activement au développement géospatial de la suite logicielle OpenSilex, un outil conçu pour la gestion avancée des données en agronomie.
+        <div class="max-w-4xl mx-auto text-gray-800">
+          <h2 class="text-4xl font-bold text-center mb-8">
+            Découvrez le Monde Innovant de Jean Philippe VERT
+          </h2>
+          <p class="text-lg mb-6">
+            Fort de mon expérience remarquable au sein de la célèbre Cellule
+            OpenSilex de l’unité MISTEA à l’INRAE de Montpellier, j’ai joué un
+            rôle clé dans le développement géospatial de la suite logicielle
+            OpenSilex. Cette plateforme, centrée sur la gestion avancée des
+            données agronomiques, m’a permis de perfectionner mes aptitudes en
+            <span class="font-semibold">Java, Vue.js, et CSS</span>.
           </p>
-          <br />
-          <p class="text-lg">
-            Profondément ancrée dans la méthodologie agile, cette immersion n’a pas seulement renforcé mon expertise en Java, Vue.js et CSS ; elle m’a également permis d’affiner ma maîtrise des systèmes d’information géographique, du Web sémantique et des bases de données orientées documents.
+          <p class="text-lg mb-6">
+            Ma contribution au projet a renforcé mon expertise en
+            <span class="font-semibold"
+              >systèmes d’information géographique</span
+            >
+            (SIG), en <span class="font-semibold">Web sémantique</span> et en
+            <span class="font-semibold"
+              >bases de données orientées documents</span
+            >. Porté par une rigueur impeccable et une dynamique contagieuse, je
+            suis animé par un engagement profond envers l’innovation et
+            l’apprentissage continu.
           </p>
-          <br />
-          <p class="text-lg">
-            Porté par une rigueur sans failles, un dynamisme contagieux et une soif inextinguible d’apprentissage, je suis résolument engagé à innover et à exceller dans mon domaine. Je serais honoré de pouvoir échanger davantage lors d’une future entrevue.
+          <p class="text-lg mb-6">
+            Déterminé à exceller dans le domaine du développement informatique,
+            je suis prêt à saisir de nouvelles opportunités et à relever les
+            défis qui se présentent. Je suis désireux de partager mes
+            compétences approfondies et mes réalisations lors d’une prochaine
+            entrevue, avec l’espoir de collaborer sur des projets pionniers.
           </p>
         </div>
       </div>
@@ -338,6 +356,18 @@
             >
               <path
                 d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"
+              />
+            </svg>
+          </a>
+          <a class="hover:text-blue-500" href="https://github.com/jpvert34">
+            <svg
+              class="h-5 w-5"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.49.5.09.68-.22.68-.48 0-.24-.01-1.02-.01-1.85-2.78.61-3.37-1.34-3.37-1.34-.46-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.89 1.53 2.34 1.09 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.56-1.11-4.56-4.94 0-1.09.39-1.98 1.03-2.68-.1-.26-.45-1.3.1-2.71 0 0 .84-.27 2.75 1.02.8-.22 1.65-.33 2.5-.33.85 0 1.7.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.41.2 2.45.1 2.71.64.7 1.03 1.59 1.03 2.68 0 3.84-2.34 4.69-4.57 4.94.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.58.69.48A10.001 10.001 0 0022 12c0-5.52-4.48-10-10-10z"
               />
             </svg>
           </a>
